tests/miz/fail/parser/fail_parser_predicate_definitions_recovery_001.miz
definition
  pred : x = y means ;
  pred BuiltinIn: x in y means thesis;
  pred BuiltinNe: x <> y means thesis;
  pred EmptyTemplate: R [] means thesis;
  pred MissingMeans: x R y thesis;
end;
